--- a/provision/ansible/playbooks/experiment.yml
+++ b/provision/ansible/playbooks/experiment.yml
@@ -1,19 +1,22 @@
 # experiment.yml - play to install a VM
 
 - name: experiment.yml
-  hosts: all
+  hosts: pi
+  remote_user: pi
+  sudo: yes
 
   roles:
     - { role: geerlingguy.git, become: yes, tags: ["git"] }
-    - { role: RomanShestakov.ansible-role-dotfiles, dotfiles_dest: "/home/vagrant" }
+    - { role: RomanShestakov.ansible-role-dotfiles, dotfiles_dest: "/home/pi" }
     - { role: RomanShestakov.ansible-role-tmux, become: yes, tags: ["tmux"] }
     - { role: RomanShestakov.erlang, become: yes, tags: ["erlang"] }
     - { role: RomanShestakov.ansible-role-emacs, become: yes, tags: ["emacs"] }
     # # - { role: ANXS.postgresql, become: yes, tags: ["postgresql"] }
-    - { role: nicholsn.miniconda, tags: ["miniconda"], miniconda_home: '/home/vagrant/miniconda' }
+    - { role: nicholsn.miniconda, tags: ["miniconda"], miniconda_home: '/home/pi/miniconda',
+    url: "http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86.sh" }
     - { role: RomanShestakov.ansible-role-conda-packages }
 
   post_tasks:
     - name: .EMACS | get .emacs git repository
-      git: repo={{ dot_emacs_repo_url }} dest="/home/vagrant/.emacs.d" accept_hostkey=yes
+      git: repo={{ dot_emacs_repo_url }} dest="/home/pi/.emacs.d" accept_hostkey=yes
       sudo: False
