--- a/provision/ansible/playbooks/production.ini
+++ b/provision/ansible/playbooks/production.ini
@@ -1,1 +1,6 @@
-default ansible_ssh_host=127.0.0.1 ansible_ssh_port=2222
+#default ansible_ssh_host=127.0.0.1 ansible_ssh_port=2222
+#pi ansible_ssh_host=192.168.1.82 ansible_ssh_port=22
+[pi]
+# 192.168.1.82
+# 192.168.1.83
+192.168.1.84
