--- a/provision/ansible/playbooks/roles/roles_requirements.yml
+++ b/provision/ansible/playbooks/roles/roles_requirements.yml
@@ -23,8 +23,8 @@
 #   version: "1.1.0"
 #   name: mtpereira.erlang
 
-- src: git+https://github.com/ANXS/postgresql.git
-  version: "v1.3.0"
+- src: git+https://github.com/RomanShestakov/postgresql.git
+  #version: "v1.3.0"
   name: ANXS.postgresql
 
 - src: git+https://github.com/RomanShestakov/ansible-role-miniconda.git
