--- a/provision/ansible/playbooks/roles/internal/pi_setup/networking/main.yml
+++ b/provision/ansible/playbooks/roles/internal/pi_setup/networking/main.yml
@@ -26,6 +26,7 @@
         - { template: interfaces.j2, dest: /etc/network/interfaces }
         - { template: resolv.conf.j2, dest: /etc/resolv.conf }
         - { template: dhcpcd.conf.j2, dest: /etc/dhcpcd.conf }
+        - { template: wpa_supplicant.conf.j2, dest: /etc/wpa_supplicant/wpa_supplicant.conf }
       notify:
         - update hostname
         - delete dhcp leases
