--- a/provision/ansible/playbooks/raspberry.yml
+++ b/provision/ansible/playbooks/raspberry.yml
@@ -15,8 +15,7 @@
     - { role: ANXS.postgresql, become: yes, postgresql_apt_repository: 'deb-src http://mirrordirector.raspbian.org/raspbian/ jessie main contrib non-free rpi', tags: ["postgresql"] }
     - { role: nicholsn.miniconda, tags: ["miniconda"], miniconda_home: '/home/pi/miniconda',
     url: "http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-armv7l.sh" }
-    #url: "http://repo.continuum.io/miniconda/Miniconda-3.5.5-Linux-armv6l.sh" }
-    # - { role: RomanShestakov.ansible-role-conda-packages, conda_dir: '/home/pi/miniconda' }
+    - { role: RomanShestakov.ansible-role-conda-packages, conda_dir: '/home/pi/miniconda' }
 
   post_tasks:
     - name: .EMACS | get .emacs git repository
